update: fix logo align problem and update url address.

--- a/_sass/base/_navigation.scss
+++ b/_sass/base/_navigation.scss
@@ -19,14 +19,13 @@
         @include span-columns(2);
         @include font-size-rem(22);
         font-weight: 500;
-        text-indent: 15px;
+        text-indent: 19px;
         line-height: rem(30);
         width: 27.5%;
-        max-height: .8em;
+        max-height: 1.1em;
         background-image: url('/assets/images/vidardb-head-white.svg');
         background-repeat: no-repeat;
         background-size: contain;
-        vertical-align: middle;
         background-position: bottom left;
         margin-bottom: .9rem;
     }
